# longliving

./: README.md  pyproject.toml
examples/repository_example_1/: example1.py  repo_keeper.py
examples/simplistic_repository/: example_simplistic.py  run_director.py
longliving/: __init__.py
longliving/director/: __init__.py  server.py
longliving/protobufs/: __init__.py  build_proto.sh  preparations.proto  preparations_pb2.py  preparations_pb2_grpc.py
longliving/repository_keeper/: __inti__.py  client.py  keeper.py  shard_description.py
tests/: test_longliving.py
